file(GLOB_RECURSE netcut_source ${PROJECT_SOURCE_DIR}/src/*/*.cc)
add_library(netcut_shared SHARED ${netcut_source})

######################################################################################################################
# THIRD-PARTY SOURCES
######################################################################################################################